rota para listar categorias
