# internal/product/adapters/drivers/dto/productDTO.go
@@ -10,7 +10,7 @@ type ProductRequestDTO struct {
 	Price         float64 `json:"price" binding:"required"`
 	Description   string  `json:"description" binding:"required"`
 	PreparingTime uint    `json:"preparing_time" binding:"required"`
-	Category      *uint   `json:"category" binding:"required"`
+	Category      *uint   `json:"category_id" binding:"required"`
 	ImageURL      string  `json:"image_url" binding:"required,url"`
 }
 
